# swiss_knife_for_ds_4

./: .gitignore  README.md  index.html  server.py  start.bat
ai-project-companion/: index.html  server.py
ai-project-companion/css/: main.css
ai-project-companion/js/components/: code-viewer.js  csv-viewer.js  dashboard.js  generators.js  plugins.js  roadmap.js  settings.js  templates.js  wizard.js
ai-project-companion/js/core/: app.js
js/components/: inspector.js  projects.js  wizard.js
js/services/: services.js
premium-edu-platform/: index.html
ппп/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ппп/.github/workflows/: ci.yml
