[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "_"
version = "0.1.0"
description = "ывваыва"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["data-science", "machine-learning"]

dependencies = [
    "pandas>=0.0.0",
    "numpy>=0.0.0",
    "scipy>=0.0.0",
    "matplotlib>=0.0.0",
    "seaborn>=0.0.0",
    "jupyter>=0.0.0",
    "openpyxl>=0.0.0"
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.urls]
Homepage = "https://github.com/your-org/_"
Repository = "https://github.com/your-org/_.git"